--- a/echo-version-service.yaml
+++ b/echo-version-service.yaml
@@ -10,5 +10,5 @@ spec:
     targetPort: 8080
   selector:
     app: echo-version
-#     color: blue 
-    color: green
+    color: blue 
+#     color: green
